questbook link added to motd

--- a/config/ftbutilities.cfg
+++ b/config/ftbutilities.cfg
@@ -35,6 +35,9 @@ auto_shutdown {
 chat {
     # Adds ~ to player names that have changed nickname to prevent trolling.
     B:add_nickname_tilde=false
+
+    # Disable this for some plugin compat. Not that they are supported but sometimes this is all that's needed.
+    B:replace_tab_names=true
 }
 
 
@@ -84,7 +87,7 @@ login {
 
     # Message of the day. This will be displayed when player joins the server.
     S:motd <
-        "Welcome to the Awakening!"
+        ["",{"text":"Welcome to the Awakening! Check out the Questbook: "},{"text":"HERE","clickEvent":{"action":"open_url","value":"https://docs.google.com/document/d/1cEgvF9DD5SYLgP5BcUEyMjPsi78f_QOx/edit?usp=drive_link&ouid=116375592009392098468&rtpof=true&sd=true"}}]
      >
 
     # Items to give player when he first joins the server.
@@ -92,8 +95,8 @@ login {
     S:starting_items <
         {id:"enderstorage:ender_pouch",Count:1,Damage:0}
         {id:"curio:itemringmagnet",Count:1,Damage:0}
-		{id:"akashictome:tome",Count:1,Damage:0}
-		{id:"sgcraft:pdd",Count:1,Damage:0}
+        {id:"akashictome:tome",Count:1,Damage:0}
+        {id:"sgcraft:pdd",Count:1,Damage:0}
      >
 }
 
