--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -52,7 +52,7 @@ _modules {
     B:management=false
     B:misc=false
     B:tweaks=true
-    B:vanity=false
+    B:vanity=true
     B:world=false
 }
 
@@ -549,7 +549,7 @@ decoration {
     # Adds the colored flower pot features of supporting additional flowers and comparator power to the vanilla flower pot using a block substitution
     B:"Better vanilla flower pot"=false
     B:"Blaze lantern"=false
-    B:"Charcoal block"=false
+    B:"Charcoal block"=true
     B:"Colored flower pots"=false
     B:"Colored item frames"=false
     B:"Flat item frames"=false
@@ -1220,7 +1220,7 @@ tweaks {
     B:"Automatic recipe unlock"=false
     B:"Axes break leaves"=true
     B:"Baby zombies burn"=true
-    B:"Blastproof shulker boxes"=false
+    B:"Blastproof shulker boxes"=true
     B:"Chickens shed feathers"=true
     B:"Compasses work everywhere"=false
     B:"Convert Clay Blocks to Clay"=true
